<resources>
    <string name="app_name">What\'s for Dinner</string>

    <string name="title_activity_intro">What\'s for Dinner?</string>
    <string name="description_activity_intro">A recipe recommendation application based on your nutritional intake</string>

    <string name="first_welcome_msg">Hello! Welcome to the test version of What\'s for Dinner.\nIf you encounter any major issues or bugs please let me know.\n&lt;3 Thomas</string>

    <!-- Intro activity -->
    <string name="iconAttr">Icon provided by Flaticon</string>

    <!-- Sign up / settings activity -->
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="description_activity_sign_up">Please input your information in order for us to provide accurate calorie and nutrition requirements</string>
    <string name="age_input">Age</string>
    <string name="gender_input">Biological Gender</string>
    <string name="gender_input_male">Male</string>
    <string name="gender_input_female">Female</string>
    <string name="height_input">Height (cm)</string>
    <string name="weight_input">Weight (kg)</string>
    <string name="btnSubmit">Submit</string>

    <!-- Main activity -->
    <string name="btnAddFood">Add Food</string>
    <string name="btnGetRecipe">Get Recipe</string>
    <string name="recentRecipeTitle">Your most recent recipe:</string>

    <string name="currentNutrients">Your current nutrients</string>
    <string name="nutritionCalorieTitle">Calories</string>
    <string name="nutritionCarbTitle">Carbohydrates</string>
    <string name="nutritionFatTitle">Fat</string>
    <string name="nutritionFiberTitle">Fiber</string>
    <string name="nutritionProteinTitle">Protein</string>

    <string name="caloriePlaceholder">%1$d / %2$d</string>
    <string name="nutritionPlaceholder">%1$.2f / %2$.2f</string>

    <!-- Add food activity -->
    <string name="enterFood">Enter a food</string>
    <string name="btnSearch">Search</string>
    <string name="selectFood">Select a food</string>
    <string name="selectQuantity">Please select the quantity you have eaten.</string>

    <!-- Get recipe activity -->
    <string name="preferredIngredient">Enter preferred ingredient</string>
    <string name="nutrientReminder">Note: If your nutrients/calories eaten are above your daily limit, a random recipe may be selected instead.</string>
    <string name="selectRecipe">Select a recipe</string>

    <!-- Settings activity -->
    <string name="btnUpdate">Update</string>
    <string name="title_activity_recipe_popup">RecipePopupActivity</string>
    <string name="btnResetNutriton">Reset Nutrition</string>
    <string name="resetNutritionConfirmation">Are you sure you would like to reset your nutrient intake?</string>

    <!-- Recipe popup activity -->
    <string name="suggestedRecipe">Here\'s what we suggest</string>
    <string name="btnNewRecipe">I want something else</string>
    <string name="btnConfirmRecipe">Perfect!</string>
    <string name="addRecipeConfirmation">Are you sure you\'d like to select this recipe? This will reset your nutrient intake for the day.</string>

</resources>

